samples/_failures_safe/1761140567_1e1f0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5cbf83b0.c: In function ‘main’:
./samples/SAFE/__tmp_5cbf83b0.c:152:9: error: expected declaration or statement at end of input
  152 |         default:
      |         ^~~~~~~
./samples/SAFE/__tmp_5cbf83b0.c:152:9: error: expected declaration or statement at end of input
